--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
+requests == 2.26.0
+fastapi == 0.70.0
+flask == 2.2.2
+uvicorn == 0.15.0
+jinja2 == 3.0.2
+python-multipart == 0.0.5
+websockets == 10.4.0
+flask-sock == 0.6.0
+numpy == 1.24.1
 streamlit
